--- a/copilot/buildspec.yml
+++ b/copilot/buildspec.yml
@@ -9,8 +9,8 @@ phases:
       - echo "cd into $CODEBUILD_SRC_DIR"
       - cd $CODEBUILD_SRC_DIR
       # Download the copilot linux binary.
-      - wget https://ecs-cli-v2-release.s3.amazonaws.com/copilot-linux-v0.4.0
-      - mv ./copilot-linux-v0.4.0 ./copilot-linux
+      - wget https://ecs-cli-v2-release.s3.amazonaws.com/copilot-linux-v0.5.0
+      - mv ./copilot-linux-v0.5.0 ./copilot-linux
       - chmod +x ./copilot-linux
   build:
     commands:
@@ -22,7 +22,9 @@ phases:
       - export COLOR="false"
       # Find all the local services in the workspace.
       - svcs=$(./copilot-linux svc ls --local --json | jq '.services[].name' | sed 's/"//g')
-      # Find all the environments.
+      # Find all the local jobs in the workspace.
+      - jobs=$(./copilot-linux job ls --local --json | jq '.jobs[].name' | sed 's/"//g')
+      # Find all the environments
       - envs=$(./copilot-linux env ls --json | jq '.environments[].name' | sed 's/"//g')
       # Generate the cloudformation templates.
       # The tag is the build ID but we replaced the colon ':' with a dash '-'.
@@ -32,17 +34,24 @@ phases:
           for svc in $svcs; do
           ./copilot-linux svc package -n $svc -e $env --output-dir './infrastructure' --tag $tag;
           done;
+          for job in $jobs; do
+          ./copilot-linux job package -n $job -e $env --output-dir './infrastructure' --tag $tag;
+          done;
         done;
       - ls -lah ./infrastructure
+      # Concatenate jobs and services into one var for addons
       # If addons exists, upload addons templates to each S3 bucket and write template URL to template config files.
+      - WORKLOADS=$(echo $jobs $svcs)
       - |
-        for svc in $svcs; do
-          ADDONSFILE=./infrastructure/$svc.addons.stack.yml
+        for workload in $WORKLOADS; do
+          ADDONSFILE=./infrastructure/$workload.addons.stack.yml
           if [ -f "$ADDONSFILE" ]; then
             tmp=$(mktemp)
             timestamp=$(date +%s)
-            aws s3 cp "$ADDONSFILE" "s3://stackset-voting-app-infr-pipelinebuiltartifactbuc-1loctyuzlk136/manual/$timestamp/$svc.addons.stack.yml";
-            jq --arg a "https://stackset-voting-app-infr-pipelinebuiltartifactbuc-1loctyuzlk136.s3-us-east-2.amazonaws.com/manual/$timestamp/$svc.addons.stack.yml" '.Parameters.AddonsTemplateURL = $a' ./infrastructure/$svc-test.params.json > "$tmp" && mv "$tmp" ./infrastructure/$svc-test.params.json
+            aws s3 cp "$ADDONSFILE" "s3://stackset-voting-app-infr-pipelinebuiltartifactbuc-1qft2insmdy42/manual/$timestamp/$workload.addons.stack.yml";
+            jq --arg a "https://stackset-voting-app-infr-pipelinebuiltartifactbuc-1qft2insmdy42.s3-us-east-1.amazonaws.com/manual/$timestamp/$workload.addons.stack.yml" '.Parameters.AddonsTemplateURL = $a' ./infrastructure/$workload-prod-iad.params.json > "$tmp" && mv "$tmp" ./infrastructure/$workload-prod-iad.params.json
+            aws s3 cp "$ADDONSFILE" "s3://stackset-voting-app-infr-pipelinebuiltartifactbuc-1g03lu588clht/manual/$timestamp/$workload.addons.stack.yml";
+            jq --arg a "https://stackset-voting-app-infr-pipelinebuiltartifactbuc-1g03lu588clht.s3-us-west-2.amazonaws.com/manual/$timestamp/$workload.addons.stack.yml" '.Parameters.AddonsTemplateURL = $a' ./infrastructure/$workload-test.params.json > "$tmp" && mv "$tmp" ./infrastructure/$workload-test.params.json
           fi
         done;
       # Build images
@@ -53,12 +62,19 @@ phases:
       #     - Retrieve the ECR repository.
       #     - Login and push the image.
       - >
-        for svc in $svcs; do
-          manifest=$(cat $CODEBUILD_SRC_DIR/copilot/$svc/manifest.yml | ruby -ryaml -rjson -e 'puts JSON.pretty_generate(YAML.load(ARGF))')
+        for workload in $WORKLOADS; do
+          manifest=$(cat $CODEBUILD_SRC_DIR/copilot/$workload/manifest.yml | ruby -ryaml -rjson -e 'puts JSON.pretty_generate(YAML.load(ARGF))')
+          image_location=$(echo $manifest | jq '.image.location')
+          if [ ! "$image_location" = null ]; then
+            echo "skipping image building because location is provided as $image_location";
+            continue
+          fi
           base_dockerfile=$(echo $manifest | jq '.image.build')
           build_dockerfile=$(echo $manifest| jq 'if .image.build?.dockerfile? then .image.build.dockerfile else "" end' | sed 's/"//g')
           build_context=$(echo $manifest| jq 'if .image.build?.context? then .image.build.context else "" end' | sed 's/"//g')
+          build_target=$(echo $manifest| jq 'if .image.build?.target? then .image.build.target else "" end' | sed 's/"//g')
           dockerfile_args=$(echo $manifest | jq 'if .image.build?.args? then .image.build.args else "" end | to_entries?')
+          build_cache_from=$(echo $manifest | jq 'if .image.build?.cache_from? then .image.build.cache_from else "" end')
           df_rel_path=$( echo $base_dockerfile | sed 's/"//g')
           if [ -n "$build_dockerfile" ]; then 
             df_rel_path=$build_dockerfile
@@ -74,19 +90,26 @@ phases:
               build_args="$build_args--build-arg $arg "
             done
           fi
-          echo "Service: $svc"
+          if [ -n "$build_target" ]; then
+            build_args="$build_args--target $build_target "
+          fi
+          if [ -n "$build_cache_from" ]; then
+            for arg in $(echo $build_cache_from | jq -r '.[]'); do
+              build_args="$build_args--cache-from $arg "
+            done
+          fi
+          echo "Name: $workload"
           echo "Relative Dockerfile path: $df_rel_path"
           echo "Docker build context: $df_dir_path"
           echo "Docker build args: $build_args"
-          echo "Running command: docker build -t $svc:$tag $build_args-f $df_path $df_dir_path";
-          docker build -t $svc:$tag $build_args-f $df_path $df_dir_path;
-          image_id=$(docker images -q $svc:$tag);
+          echo "Running command: docker build -t $workload:$tag $build_args-f $df_path $df_dir_path";
+          docker build -t $workload:$tag $build_args-f $df_path $df_dir_path;
+          image_id=$(docker images -q $workload:$tag);
           for env in $envs; do
-            repo=$(cat $CODEBUILD_SRC_DIR/infrastructure/$svc-$env.params.json | jq '.Parameters.ContainerImage' | sed 's/"//g');
+            repo=$(cat $CODEBUILD_SRC_DIR/infrastructure/$workload-$env.params.json | jq '.Parameters.ContainerImage' | sed 's/"//g');
             region=$(echo $repo | cut -d'.' -f4);
             $(aws ecr get-login --no-include-email --region $region);
             docker tag $image_id $repo;
-            echo "pushing to" $repo;
             docker push $repo;
           done;
         done;
