--- a/copilot/pipeline.yml
+++ b/copilot/pipeline.yml
@@ -31,7 +31,7 @@ stages:
     - # The name of the environment to deploy to.
       name: prod-iad
       # Optional: flag for manual approval action before deployment.
-      requires_approval: true
+      # requires_approval: true
       # Optional: use test commands to validate this stage of your build.
       # test_commands: [echo 'running tests', make test]
 
