--- a/copilot/api/manifest.yml
+++ b/copilot/api/manifest.yml
@@ -26,6 +26,7 @@ cpu: 1024
 # Amount of memory in MiB used by the task.
 memory: 6144
 # Number of tasks that should be running in your service.
+exec: true
 count:
   range: 1-10
   cpu_percentage: 70
